# helena_haffner_chess_tournament_P4_24112023

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
control/: controller.py  controller_helper.py
controller/: controller.py  controller_helper.py
export/: export_helper.py  export_player_data.py  export_tournament_data.py
extractor/: player_list_extract.py
flake-report/: index.html
models/: game.py  player.py  round.py  tournament.py
outputs/global_players_list/: global_players_list.json
settings/: settings.py
view/: view.py
