[tool.poetry]
name = "helena-haffner-p4-24112023"
version = "0.1.0"
description = ""
authors = ["Featherine <helaena.ha2fner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
